[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/StoreMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/ButtonStore.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Store_Cart.png" type="Texture" id=3]
[ext_resource path="res://Script/StoreCart.gd" type="Script" id=4]

[node name="Store - Cart" type="Node2D"]
script = ExtResource( 4 )

[node name="StoreCart" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HomeRectangle" parent="." instance=ExtResource( 2 )]
margin_left = 47.0
margin_top = 159.0
margin_right = 332.0
margin_bottom = 224.0

[node name="BooksRectangle" parent="." instance=ExtResource( 2 )]
margin_left = 46.0
margin_top = 226.0
margin_right = 333.0
margin_bottom = 293.0

[node name="VehiclesRectangle" parent="." instance=ExtResource( 2 )]
margin_left = 46.0
margin_top = 302.0
margin_right = 332.0
margin_bottom = 369.0

[node name="ShirtsRectangle" parent="." instance=ExtResource( 2 )]
margin_left = 46.0
margin_top = 378.0
margin_right = 333.0
margin_bottom = 445.0

[node name="PetsRectangle" parent="." instance=ExtResource( 2 )]
margin_left = 48.0
margin_top = 463.0
margin_right = 334.0
margin_bottom = 529.0

[node name="HousesRectangle" parent="." instance=ExtResource( 2 )]
margin_left = 46.0
margin_top = 550.0
margin_right = 333.0
margin_bottom = 611.0

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[node name="Selected_Product" type="Sprite" parent="."]
position = Vector2( 775, 450 )

[connection signal="pressed" from="HomeRectangle" to="." method="_on_HomeRectangle_pressed"]
[connection signal="pressed" from="BooksRectangle" to="." method="_on_BooksRectangle_pressed"]
[connection signal="pressed" from="VehiclesRectangle" to="." method="_on_VehiclesRectangle_pressed"]
[connection signal="pressed" from="ShirtsRectangle" to="." method="_on_ShirtsRectangle_pressed"]
[connection signal="pressed" from="PetsRectangle" to="." method="_on_PetsRectangle_pressed"]
[connection signal="pressed" from="HousesRectangle" to="." method="_on_HousesRectangle_pressed"]
